# Bachelor-degree

./: .gitmodules  ALS.ipynb  BPR.ipynb  GBDT.ipynb  README.md  SGD.ipynb  WARP.ipynb  buildJar.cmd  buildJavadoc.cmd  hw4.cabal  package-lock.json  stack.yaml
.stack-work/: stack.sqlite3
Actor/src/: Main.java  Server.java
Actor/test/: SearchTests.java
Codeforces/: A.java  B.java  C.java  H.py  L.java  P.py  Q.py
Functional programming/: README.md.textClipping
Functional programming/hw3/: stack.yaml
Functional programming/hw4/: hw4.cabal
Functional programming/hw4/.stack-work/install/x86_64-osx/24d947b13379c1938c55a1c165f714842b104c5757fb42e8d7bb15014fd30688/8.8.4/lib/x86_64-osx-ghc-8.8.4/hw4-0.1.0.0-5uM4Io3UrlXB5v4agw3bcl/: Task5.hi
Functional programming/hw4/.stack-work/install/x86_64-osx/24d947b13379c1938c55a1c165f714842b104c5757fb42e8d7bb15014fd30688/8.8.4/lib/x86_64-osx-ghc-8.8.4/hw4-0.1.0.0-6aYHIlpy0jQ4r5z5JxV1My/: Task3.hi  Task7.hi  Task8.hi
Functional programming/hw4/.stack-work/install/x86_64-osx/24d947b13379c1938c55a1c165f714842b104c5757fb42e8d7bb15014fd30688/8.8.4/lib/x86_64-osx-ghc-8.8.4/hw4-0.1.0.0-7sMBcw5ekefK2SRqMgUKiN/: Task3.hi  Task4.hi  Task5.hi  Task7.hi  Task8.hi
Functional programming/hw4/bench/: Bench1.hs  Bench2.hs
Functional programming/hw4/src/: Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
Functional programming/hw4/test/: Test4.hs  Test5.hs
HW 1/: 101.perl  105.perl  107.perl  110.perl  111.perl  201.perl  205.perl  206.perl  210.perl  301.perl  302.perl
HW1/: BPR.ipynb  SGD.ipynb
HW1/src/: MyLinkedHashMap.java  MyLinkedHaspMapTest.java
HW2/: .getignore  GBDT.ipynb  W2V.ipynb
HW2/src/: Main.java
HW6/src/: Tokenizer.java
HW7/src/: LogAspect.aj
Java Advanced/: README.md  build.bat
Java Advanced/java-solutions/: text_en.properties
Lab1/: Main.hs  Makefile
Lab2/src/: And.java  Expression.java  Implication.java  Or.java
Lab3/: Makefile
Lab3/src/: AbstractUnaryOperation.java  And.java  Const.java  Next.java  Not.java  Or.java  Variable.java
Lab4/: Makefile
Lab4/src/: AbstractUnaryOperation.java  (+2 more)
Labs/: Баженов Егор Анатольевич Bayes.py  Баженов Егор Анатольевич Boost.py  Баженов Егор Анатольевич CNN.py  Баженов Егор Анатольевич DT.py  Баженов Егор Анатольевич KNN.py  Баженов Егор Анатольевич SVM.py
Machine Learning/: README.md
Methods Translations/: README.md
PPO1/: package.json
bench/: Bench3.hs  Main.hs
hw3/: hw3.cabal
hw3/.stack-work/: stack.sqlite3
hw3/.stack-work/install/8c3a1984/lib/x86_64-windows-ghc-8.8.4/hw3-0.1.0.0-IzHBWxLLGFe4GDxcLKfu06/: Parser.hi  StartFileSystem.hi
hw3/.stack-work/install/8c3a1984/pkgdb/: package.cache
hw3/hw3/src/: Commands.hs  Parser.hs
hw3/hw3/test/: Test.hs
hw3/src/: Parser.hs  StartFileSystem.hs  Types.hs
hw3/test/: Test.hs
hw4/: README.md
java-solutions/: text.properties  text_ru.properties
mvc/: pom.xml  tasks.db
src/: Task1.hs  Task3.hs  Task8.hs
test/: Main.hs  Test1.hs  Test2.hs  Test3.hs
(+447 files in other folders)
