name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Egor Bazhenov
maintainer:          tujh.bazhenov.kbn00@mail.ru
copyright:           2020 Egor Bazhenov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     StartFileSystem, Commands, Parser, Types
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, directory, filepath, optparse-applicative, text, time, transformers, mtl, system-filepath, transformers-base
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hw3, hspec, tasty, tasty-hspec, hedgehog, tasty-hedgehog, mtl, directory, time, system-filepath
  default-language:    Haskell2010
