name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Egor Bazhenov
maintainer:          tujh.bazhenov.kbn00@mail.ru
copyright:           2020 Egor Bazhenov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1, Task1Slow, Task2, Task3, Task4, Task5, Task6, Task7, Task8
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, random, unsafe, parallel, directory, filepath, lens, stm , monad-par, hashable, vector, comonad
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test1, Test2, Test3, Test4, Test5, Test67
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hw4, hspec, tasty, tasty-hspec, hedgehog, tasty-hedgehog, lens
  default-language:    Haskell2010

benchmark hw4-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       Bench1, Bench2, Bench3
  build-depends:       base >= 4.9 && < 5, criterion, hw4, criterion, deepseq, unsafe
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N4
  default-language:    Haskell2010